# ocs2_cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_all.sh  make_clean.sh
external_lib/eigen3/: CMakeLists.txt
external_lib/hpp-fcl/: CMakeLists.txt
external_lib/pinocchio/: CMakeLists.txt
ocs2_comm_wrapper/: CMakeLists.txt
ocs2_comm_wrapper/include/ocs2_comm_wrapper/: TopicPublisherWrapper.h  TopicReceiverWrapper.h
ocs2_core/: CMakeLists.txt
ocs2_core/include/ocs2_core/integration/: TrapezoidalIntegration.h
ocs2_mpc/: CMakeLists.txt
ocs2_oc/: CMakeLists.txt
ocs2_pinocchio/ocs2_centroidal_model/: CMakeLists.txt
ocs2_pinocchio/ocs2_pinocchio_interface/: CMakeLists.txt
ocs2_qp_solver/: CMakeLists.txt
ocs2_robotic_examples/ocs2_legged_robot/: CMakeLists.txt
ocs2_robotic_examples/ocs2_legged_robot/config/mpc/: task.info
ocs2_robotic_examples/ocs2_legged_robot/include/ocs2_legged_robot/: LeggedRobotInterface.h
ocs2_robotic_examples/ocs2_legged_robot/include/ocs2_legged_robot/common/: Types.h
ocs2_robotic_examples/ocs2_legged_robot/src/: LeggedRobotInterface.cpp
ocs2_robotic_examples/ocs2_legged_robot_test/: CMakeLists.txt
ocs2_robotic_examples/ocs2_legged_robot_test/include/ocs2_legged_robot_test/: DummyReceiver.h
ocs2_robotic_examples/ocs2_legged_robot_test/include/ocs2_legged_robot_test/gait/: GaitReceiver.h
ocs2_robotic_examples/ocs2_legged_robot_test/include/ocs2_legged_robot_test/synchronized_module/: ReferenceReceiver.h
ocs2_robotic_examples/ocs2_legged_robot_test/src/: LeggedRobotSqpMpcNode.cpp
ocs2_robotic_examples/ocs2_legged_robot_test/src/gait/: GaitReceiver.cpp
ocs2_robotic_examples/ocs2_legged_robot_test/src/synchronized_module/: ReferenceReceiver.cpp
ocs2_robotic_tools/: CMakeLists.txt
ocs2_sqp/blasfeo_cmake/: CMakeLists.txt
ocs2_sqp/hpipm_cmake/: CMakeLists.txt
ocs2_sqp/hpipm_cmake/include/hpipm/: HpipmInterface.h
ocs2_sqp/hpipm_cmake/src/: HpipmInterface.cpp  HpipmInterfaceSettings.cpp
ocs2_sqp/hpipm_cmake/test/: testHpipmInterface.cpp
ocs2_sqp/ocs2_sqp/: CMakeLists.txt  README.md
ocs2_sqp/ocs2_sqp/include/ocs2_sqp/: SqpSettings.h  SqpSolver.h
ocs2_thirdparty/: CMakeLists.txt
